--- a/css/main.css
+++ b/css/main.css
@@ -144,8 +144,11 @@ h2 {
   padding: 10px;
 }
 
-.form-group {
+form .form-group {
   margin-bottom: 10px;
+  display: inline-block;
+  width: 45%;
+
 }
 
 label {
