--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@
 }
 
 .headnav {
-  box-shadow: 2px 2px 2px black;
+  box-shadow: 2px 2px 2px rgb(31, 1, 1);
   position: fixed;
   top: 0;
   left: 0;
